# micfong-os

./: Cargo.toml  build.rs
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  bitmap.rs  colors.rs  gdt.rs  graphics.rs  gui.rs  interrupts.rs  keyboard.rs  layer.rs  lib.rs  log.rs  main.rs  memory.rs  serial.rs  unifont.rs
src/: lib.rs  main.rs  serial.rs
