[package]
name = "micfong_os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
uart_16550 = "0.2.0"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
