[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
conquer-once = { version = "0.3.2", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
x86 = "0.52.0"
linked_list_allocator = "0.10.5"