[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.2"
spin = "0.9.5"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
conquer-once = { version = "0.3.2", default-features = false }
x86 = "0.52.0"
linked_list_allocator = "0.10.5"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
